--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,6 +31,9 @@ section#login {
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
+
+    transition: width .5s, heigth .5s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
