--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,7 +27,7 @@ section#login {
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
@@ -56,6 +56,42 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 8px 0px;
+}
+
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    transform: translateY(-12px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+}
+
+div.campo > label {
+    display: none;
 }
 
 
@@ -88,4 +124,13 @@ form > a.botao {
     border: 1px solid #49a09d;
     border-radius: 5px;
     text-decoration: none;
+}
+
+
+form > a.botao:hover {
+    background-color: #6cd3cf;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
 }
